--- a/chapter_LEMs.tex
+++ b/chapter_LEMs.tex
@@ -154,37 +154,13 @@ Recent developments within the modelling community have extended traditional mod
 
 Another recent development is the Landlab software package \citep{hobley2017creative}, which takes a highly modular approach to numerical modelling of landscapes. The user can rapidly create their own bespoke LEM from a set of existing components. This results in a high degree of user control over the complexity of the model configuration, not only in terms of process representation, but also the effect that technical aspects, such as grid type and flow routing algorithm have on model performance and output. The modular design avoids the usual expenditure of re-writing commonly used codes for process representation, model gridding, and standardised file input and output. A key strength of Landlab is its accessibility to users who do not have significant prior experience in designing and implementing numerical codes, but wish to embark on model development. Examples of Landlab's applications include the study of impact cratering on landscape evolution \citep{hobley2013modeling}, the impacts of wildfires on hydrologic response \citep{adams2017landlab}, quantifying the link between regolith production and subsurface temperatures \citep{barnhart2014chilly}, investigating the response of landscape evolution under non-steady state hydrology \citep{adams2017landlab}, and as a basis for developing a stochastic cellular automaton model \citep{Tucker2015}.
 
-The selection of LEMs discussed here range from those that have already established a wide user-base in landscape evolution research (e.g. CHILD, CAESAR, LAPSUS), to newer developments that offer novel functionality or process representation for modellers (e.g. Landlab, CLiDE, DAC, LSDTopoTools). This chapter is not an exhaustive list of landscape evolution models, and some previously popular models have been omitted as it was felt they have been superseded or subsumed by newer offerings. The range of LEMs discussed here should nevertheless provide a starting point for tackling a wide range of modelling endeavours.
+The selection of LEMs discussed here range from those that have already established a wide user-base in landscape evolution research (e.g. CHILD, CAESAR, LAPSUS), to newer developments that offer novel functionality or process representation for modellers (e.g. Landlab, CLiDE, DAC, LSDTopoTools). This chapter is not an exhaustive list of landscape evolution models, and some previously popular models have been omitted as it was felt they have been superseded or subsumed by newer offerings. The range of LEMs discussed here should nevertheless provide a starting point for tackling a wide range of modelling endeavours. A table summarising the main features and processes represented in each LEM is given in Table \ref{fig_LEM_comparison}.
 
-%\section{Applications and Examples}
-%
-%This section presents a short discussion of three recent studies using landscape evolution models. The selection was chosen to represent a broad selection of timescales, landscape types, and conceptual models. The reader should refer to the table in Appendix A for an expanded list of examples for further reading.
-%
-%\subsection[Testing Fluvial Erosion Laws (CHILD, Attal et al. 2008) ]{Testing Fluvial Erosion Laws (CHILD, Attal et al. 2008) }
-%Several laws of fluvial erosion have been proposed to describe the evolution of river profiles (e.g. Seidl and Dietrich, 1992; Howard, 1994; Dietrich et al., 2003), and discriminating between which law is appropriate for a given landscape is challenging. Attal et al. (2008) tackle this by selecting river basins believed to be undergoing a transient response to base level change along an active fault (setting depicted in Figure 7). They use an LEM to test two of the common end-member models of fluvial incision: a transport-limited and detachment-limited case. The underlying process models are parameterised and calibrated using field data collected from the basins. Starting from a steady-state form of each basin’s topography, the CHILD model simulations are run with fault throw accelerations programmed at known intervals, which are well documented from previous studies.
-%
-%An inverse problem is set up, using an ensemble of model simulations to determine which combination of fluvial incision model and parameters produce the closest match to the observed topography. The study also benefits from careful selection of field sites with uniform lithologies, which helps constrain the range of variables. 
-%
-% \includegraphics[width=7.883cm,height=5.272cm]{LEMFinalRevisedmanuscriptDAVFinalrevisions-img/LEMFinalRevisedmanuscriptDAVFinalrevisions-img008.png} 
-%
-%Figure 7. Example output from the CHILD model used in Attal et al. (2008). Landscape response to tectonic perturbation (fault throw acceleration) is shown. Example using real topography in the Italian Apennines. 
-%
-%\subsection{Climate, Tectonics or Morphology in Sediment Yields (CAESAR, Coulthard and Van De Wiel, 2013) }
-%Landscape evolution covers a range of temporal scales – this study by Coulthard and Van De Wiel (2013) focuses on landscape evolution over short time periods of c. 100–1000 years. The study uses a forward modelling approach to predict the relative importance of different perturbations to a river catchment of approximately 500 km2 in the North of England. The CAESAR model was set up to run a series of 100 year and 1000 year experiments, each with a single different tectonic or climatic perturbation introduced to each experiment, with all other conditions remaining the same.
-%
-%From the results of the experiments, the authors are able to predict the relative impacts of climatic versus tectonic perturbations on the catchment. For a transport-limited environment, the authors discover climatic changes have the greater effect on sediment yields at shorter timescales, with sediment signals from increased rates of uplift being lost in the internal storage of the basin. 
-%
-%The study shows that LEMs may be used to make useful predictions about sediment yields in order to assess the relative importance of external perturbations, rather than to precisely predict the amounts of sediment output. Furthermore, landscape evolution is the result of a complex interaction of several competing processes, and by carefully isolating each process or potential perturbation in separate experiments, it is possible to explore which factors have the most significant impact on drainage basin evolution.
-%
-%\subsection{Coupled Numerical-Analytical Approach to Landscape Evolution Modelling (DAC-FastScape, Goren et al. 2014) }
-%This study tackles a shortcoming in previous LEMs where the form and processes associated with drainage divides were under- represented in models, and investigates the implications on landscape evolution at the range scale, with an LEM that can accurately represent drainage divides. The authors propose a hybrid numerical-analytical model called ‘Divide and Capture’ (DAC, based on the FastScape algorithm of Braun and Willet, 2013), which calculates the positioning of drainage divides based on a sub-grid scale parametrisation of divide migration. Their precise analytical description of water divides is found to alter the dynamics of basins either side of the divide. Using a synthetic landscape (Figure 8), they find that the time taken for landscapes to reach steady state is longer due to the dynamic reorganisation and basin capture that persists about drainage divides, long after traditional LEMs would have reached steady state. 
-%
-%The study tackles the problem using a range of synthetic topographies, and is an example of using LEMs in an exploratory way to make general predictions about landscape form. The latter half of the study shows that ‘real’ topographies can be simulated in general terms, using a model set-up that simulates the key features of the New Zealand Southern Alps. A real DEM is not used, but by carefully choosing the initial conditions, parameters, and tectonic boundary conditions the authors show that this simplified version of a landscape is sufficient to represent the key characteristics of their study area (Figure 8).
-%
-%\begin{figure*}[htp]
-%\centering
-%\includegraphics[width=16.854cm,height=4.812cm]{LEMFinalRevisedmanuscriptDAVFinalrevisions-img/LEMFinalRevisedmanuscriptDAVFinalrevisions-img009.png}
-%\end{figure*}
+\begin{sidewaystable}[t]
+\includegraphics[width=24cm]{LEMFinalRevisedmanuscriptDAVFinalrevisions-img/table_lems_comparison.png} 
+\caption{Feature comparison of widely used landscape evolution models. Process representation shown by model in blue/pink/white matrix.}
+\label{fig_LEM_comparison}
+\end{sidewaystable}
 
 \section{Uncertainty, Sensitivity, and Calibration}
 
