--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -1,6 +1,6 @@
 %\title{Numerical modelling of catchment hydrogeomorphological sensitivity to rainfall spatial distribution and erosion law parameterisation during convective rainfall events in the UK}
 
-\title{Numerical modelling of hydrogeomorphological sensitivity to rainfall and erosion law parameterisation during convective rainfall events in the UK}
+\title{Modelling catchment sensitivity to rainfall resolution and erosional parameterisation in simulations of flash floods in the UK}
 
 \author{Declan A. Valters}
 % Faculty of Life Sciences people should comment the next line out
@@ -18,7 +18,7 @@
 %\def\declaration{All the work in this thesis has been sourced from Google.}
 
 \beforeabstract
-The contribution of this thesis is twofold: 1) the development of a hydrodynamic landscape evolution model for use on high-performance computing systems and 2) assessing the sensitivity of hydrogeomorphic processes to high-resolution rainfall input data using the model.
+The contribution of this thesis is twofold: 1) the development of a hydrodynamic landscape evolution model for use on high-performance computing systems and 2) assessing the sensitivity of hydrogeomorphic processes to high-resolution rainfall input data and erosional parameterisation using the model.
 
 The thesis addresses a limitation in numerical landscape evolution models regarding how spatial variation in rainfall is represented or parameterised within such models. Typically, landscape evolution models forsake a realistic representation of rainfall patterns in favour of a simpler treatment of rainfall as being spatially homogeneous across the model domain. This simplification of rainfall spatial variability is still made despite the fact that many geomorphological processes are sensitive to thresholds of sediment entrainment and transport, driven by the distribution and movement of water within the landscape. 
 
