--- a/thesis.tex
+++ b/thesis.tex
@@ -9,7 +9,7 @@
 \documentclass[12pt,oneside,PhD]{muthesis}
 
 % Use this command to output a single chapter
-%\includeonly{chapter_events}
+%\includeonly{frontmatter}
 %\includeonly{chapter_geomorph}
 %\includeonly{chapter_floodinundation}
 %\includeonly{chapter_metdatamodels}
@@ -24,6 +24,7 @@
 %\linenumbers
 \usepackage{listings}
 %\usepackage{epigraph}
+%\usepackage{sidewaysfigure}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{textcomp}
 \usepackage{hyperref}
