Changes to GRIDDED vs GRID in figs, tidied up conclusion section

--- a/conclusions.tex
+++ b/conclusions.tex
@@ -36,35 +36,38 @@ Firstly, the model's basis as a redevelopment of an existing model (CAESAR-Lisfl
 
 Secondly, in addition to the speed-up in simulation runtimes achieved, the ability to now use HPC facilities to conduct hydrogeomorphological modelling studies allows large-scale sensitivity analyses to be done, with multiple member `ensemble-style' simulations, in a similar fashion to numerical weather prediction model ensembles \citep{sivillo1997ensemble,klein2015variability}. In this study, six-member simulations per case study are are used for the main set of experiments (Table \ref{table_ensemble_experiments}), with ten member simulations used for the parameter sensitivity analysis in Chapter \ref{chapter_flood_model_sensitivity} (Table \ref{table-m-sens}). With sufficient computing resources, much larger ensemble simulations would be possible using the HAIL-CAESAR model.
 
-\section{Future work and applications}
+\section{Future research and applications}
 This study has touched upon the potential for using large ensemble-style simulations to assess sensitivity in landscape evolution modelling studies. Since numerical landscape evolution models typically contain a large number of parameters, particularly as they often combine multiple-process sub-models such as erosion, hydrology, hillslope processes, and other surface processes, a thorough exploration of parameter space is usually beyond the scope of many studies. Current applications of landscape erosion and evolution models rarely make use of multiple-member ensemble simulations, whereas this practice is more commonly found in hydrological modelling \citep{cloke2009ensemble,wong2015sensitivity} and numerical weather prediction \citep{sivillo1997ensemble}. Hydrogeomorphic and landscape evolution modelling studies have been late adopters of ensemble simulations, but this thesis as well as other projects \citep[e.g.][]{schaake2007hepex,skinner2017lemsi} highlight the timely applicability of ensemble-style simulations for future hydrogeomorphic research. The HAIL-CAESAR model could be used in this way in future studies to more rigorously assess model sensitivity to user-defined parameters in landscape evolution modelling. Taking advantage of the increase in computing power in recent decades with the HAIL-CAESAR model presented in this thesis would enable a rigorous exploration of model sensitivity to parameter-space, initial model conditions, input data quality, model resolution, and many other sources of potential uncertainty \citep{pelletier2015forecasting}.
 
-Further development of the model would allow it to tackle large catchments at regional to continental scale, or very high resolution studies of smaller river catchments. High resolution topographic data already exists at resolutions of 0.2 to 0.5 m, primarily sourced from LiDAR-dervied topographic data. At this resolution, river channel and other geomorphological features can be resolved in great detail within the model domain. Although the data is readily available now, few modelling studies have yet made use of such high resolution data, partly because of limitations in computational resources and appropriately designed software. Notwithstanding, the HAIL-CAESAR model would require further development to address the scaling issues highlighted in Chapter \ref{chapter_HAIL-CAESAR}, in order to tackle model domains containing tens of millions of grid cells. A new parallelisation strategy would need to be investigated, such as a distributed memory model parallelisation decomposing the model domain among multiple compute nodes. Such work would require a considerable development effort but there are precedents for hydrological models being parallelised in this way before \citep{vivoni2011real}, and many of the techniques could be applied to landscape evolution models such as HAIL-CAESAR.
- 
+Further development of the model would allow it to tackle large catchments at regional to continental scale, or very high resolution studies of smaller river catchments. High resolution topographic data already exists at resolutions of 0.2 to 0.5 m, primarily sourced from LiDAR-dervied topographic data. At this resolution, river channel and other geomorphological features can be resolved in great detail within the model domain. Although the data is readily available now, few modelling studies have yet made use of such high resolution data, partly because of limitations in computational resources and appropriately designed software. Notwithstanding, the HAIL-CAESAR model would require further development to address the scaling issues highlighted in Chapter \ref{chapter_HAIL-CAESAR}, in order to tackle model domains containing tens of millions of grid cells.
+
 Predicting catchment response to intense rainfall events is a pressing societal issue. Current flood forecasting applications tend to focus primarily on the hydrological response of catchments without taking into account geomorphological change during such events. Future development of models in the flood-forecasting community could expand them to be more holistic simulators of catchment processes, including sediment erosion and transport, in addition to their core functionally of predicting flood inundation extents. 
+
+\section{Future development of HAIL-CAESAR}
+
+A number of interested parties have expressed interest in using HAIL-CAESAR for further landscape evolution and hydrological modelling. Future development work is outlined here.
+
+\subsection*{Reach mode}
+Development of the model in future would include the development of a `reach-mode' in addition to the `whole-catchment' mode currently implemented in the model. Reach-mode would be a configuration of the model that allows it to simulate localised sections of a river channel and surrounding area. Reach-mode is also feature of the progenitor to the HAIL-CAESAR model, CAESAR-Lisflood, and has applications where detailed simulations are required of particular sections of river channel, but not of the entire catchment. Reach mode (as part of CAESAR-Lisflood) has been employed in a number of studies to date (CITE) and would be a useful addition to the CAESAR modelling community. 
+
+\subsection*{Process representation}
+A number of processes in the CAESAR and CAESAR-Lisflood models were omitted in the HAIL-CAESAR development process because of time constraints and applicability to the research questions posed in this thesis. Additional process representation in the HAIL-CAESAR model could be facilitated by the implementation of the following additional subroutines in the model code:
+
+\begin{itemize}
+\item \textbf{Lateral channel erosion}. Currently only downcutting erosion and deposition is represented in the model. The lack of lateral erosion mechanisms was highlighted as a possible limitation in the HAIL-CAESAR model's ability to fully predict the amount and distribution in the Boscastle event documented in Chapter \ref{chapter_hydrogeomorph}
+
+\item \textbf{Slope processes}. Slope processes in HAIL-CAESAR as well as CAESAR-Lisflood have very simple representations based on simple threshold gradients to initiate redistribution of slope material between adjacent cells. A number of more physically realistic slope process models exist that could be incorporated into the HAIL-CAESAR model.
+
+\item \textbf{Groundwater}. Interest has been expressed by the developers of the British Geological Survey's CLiDE model in using HAIL-CAESAR as a basis for the development of a coupled groundwater--catchment hydrology and erosion model for use on HPC services. The groundwater components would be based on the algorithms in the existing CLiDE model, another CAESAR-based model with applications in environmental modelling and prediction \citep[e.g.][]{Barkwith2015}.
+
+\item \textbf{MPI parallelisation}. HAIL-CAESAR was parallelised in a way to facilitate the use of multi-member ensemble simulations on shared-memory compute nodes. This method of parallelisation lends itself well to sensitivity analyses as demonstrated in this thesis, and moderately large domains and high-resolution data. However, to fully exploit the highest resolution datasets available, or to conduct regional to continental scale modelling studies, a different parallelisation strategy would have to be employed using what is termed `distributed-memory' parallelism, whereby the model domain is decomposed across multiple computing nodes. The most common approach to this is to use a parallelisation standard known as MPI -- the Message Passing Interface. Initial plans for the implementation of HAIL-CAESAR with the MPI software libraries are currently under development. Such work would require a considerable development effort but there are precedents for purely hydrological models being parallelised in this way before \citep{vivoni2011real}, and many of the techniques could be applied to landscape evolution models such as HAIL-CAESAR.
+
+There has also been an interest expressed in using part of the HAIL-CAESAR model as an educational tool for teaching MPI parallesation, in part due to the cellular automaton modelling framework being a relatively straightforward modelling technique to parallelise over a 2D domain (Edinburgh Parallel Computing Centre -- personal communication).
+
+\end{itemize}
+
+
 
 \section{Summary}
 This thesis has presented a novel method for simulating hydrological and geomorphological processes at the catchment scale using high-performance computing systems. This method was then applied to investigating the sensitivity of hydrogeomorphic processes to the spatial resolution of rainfall input data and erosional process parameterisation. It was found that while spatial variability in rainfall input data to models can affect the hydrological outputs of numerical models, predictions are not necessarily more accurate in all cases when using spatially variable rainfall input data. In terms of predicting sediment fluxes and erosion distribution, the choice of erosion law had a more pronounced effect on sediment fluxes compared to spatially variable rainfall input data. Notwithstanding, the use of spatially variable rainfall data in hydrodynamic landscape evolution models can in some cases better predict localised distribution of erosion within a river catchment. The findings and methodological developments pose a useful contribution to the future of hydrogeomorphological modelling and its applications in environmental prediction and forecasting.
 
-\section{Future applications and development of HAIL-CAESAR}
-
-A number of interested parties have expressed interest in using HAIL-CAESAR for further landscape evolution and hydrological modelling. Future development work is outlined here.
-
-\subsection{Reach mode}
-Development of the model in future would include the development of a `reach-mode' in addition to the `whole-catchment' mode currently implemented in the model. Reach-mode would be a configuration of the model that allows it to simulate localised sections of a river channel and surrounding area. Reach-mode is also feature of the progenitor to the HAIL-CAESAR model, CAESAR-Lisflood, and has applications where detailed simulations are required of particular sections of river channel, but not of the entire catchment. Reach mode (as part of CAESAR-Lisflood) has been employed in a number of studies to date (CITE) and would be a useful addition to the CAESAR modelling community. 
-
-\subsection{Process representation}
-A number of processes in the CAESAR and CAESAR-Lisflood models were omitted in the HAIL-CAESAR development process because of time constraints and applicability to the research questions posed in this thesis. Additional process representation in the HAIL-CAESAR model could be facilitated by the implementation of the following additional subroutines in the model code:
-
-\begin{itemize}
-\item \textbf{Lateral channel erosion}. Currently only downcutting erosion and deosition is represented in the model. The lack of lateral erosion mechanisms was highlighted as a possible limitation in the HAIL-CAESAR model's ability to fully predict the amount and distribution in the Boscastle event documented in Chapter \ref{chapter_erosion}
-
-\item \textbf{Slope processes}. Slope processes in HAIL-CAESAR as well as CAESAR-Lisflood have very simple representations based on simple thrteshold gradients to initiate redistribution of slope material between adjacent cells. A number of more physically realistic slope process models exist that could be incorporated into the HAIL-CAESAR model.
-
-\item \textbf{Groundwater}. Interest has been expressed by the developers of the British Geological Survey's CLiDE model in using HAIL-CAESAR as a basis for the development of a coupled groundwater--catchment hydrology and erosion model for use on HPC services. The groundwater components would be based on the algorithms in the existing CLiDE model, another CAESAR-based model with applications in environmental modelling and prediction \citep{e.g. BARkwith...Nene}.
-
-\item \textbf{MPI parallelisation}. HAIL-CAESAR was parallelised in a way to facilitate the use of multi-member ensemble simulations on sahred-memory compute nodes. This method of parallelisation lends itself well to sensitivity analyses as demonstrated in this thesis, and moderately large domains and high-resolution data. However, to fully exploit the highest resolution datasets available, or to conduct regional to continetal scale modelling studies, a different parallelisation strategy would have to be employed using what is termed `distributed-memory' parallelis, whereby the model domain is decomposed across multiple computing nodes. The most common approach to this is to use a parallelisation standard known as MPI -- the Message Passing Interface. Initial plans for the implementation of HAIL-CAESAR with the MPI software libraries are currently under development. 
-
-There has also been an interest expressed in using part of the HAIL-CAESAR model as an educational tool for teaching MPI parallesation, in part due to the cellular automaton modelling framework being a relatively straighforward modelling technique to parallelise over a 2D domain (Edinburgh Parallel Computing Centre -- personal comms.).
-
-\end{itemize}
